# snippet-website

./: .env  .gitignore  .unibeautifyrc.yml  Cargo.toml  Dockerfile  Procfile  README.md  Rocket.toml  docker-compose.yml  entrypoint.sh  requirements.txt
backend/api/: urls.py  views.py
backend/backend/: settings.py  urls.py
message_server/: Cargo.toml
migrations/: 20220321085604_initial.sql  20220321091919_users.sql  20220323092253_initial.sql  20220323181407_not_null.sql  20220323195332_set_salt_not_null.sql  20220331140408_change_snippet_author_type.sql  20220427171812_profiles_table.sql  20220428034202_made_profile_fields_not_null.sql  20220428151945_made_language_field_in_code_snippets_not_null.sql  20220429045557_change_profiles_table_field_types.sql  20220430050852_add_avatar_field.sql  20220521171933_merge_profile_and_user.sql  20220527151200_add_messages_table.sql  20220528123713_add_channels_table.sql  20220528184221_set_channel_name_not_null.sql  20220711065318_added_likes_table.sql
nginx/: Dockerfile  default.conf
src/: api.rs  contexts.rs  forms.rs  main.rs  models.rs
static/: styles.css
static/js/: snippet_detail.js
templates/: add_channel.html.tera  add_snippet.html.tera  base_template.html.tera  channel_messages.html.tera  channels_list.html.tera  edit_profile.html.tera  home.html.tera  login.html.tera  macros.html.tera  profile.html.tera  register.html.tera  snippet_detail.html.tera
website/: Cargo.toml
website/api/: urls.py  views.py
website/main/: admin.py  forms.py  models.py  urls.py  views.py
website/src/: forms.rs  main.rs
(+34 files in other folders)
